[gd_scene load_steps=6 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://assets/Enemys/slime_enemy.gd" type="Script" id=2]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "run",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 6.0
height = 2.0

[sub_resource type="CircleShape2D" id=3]
radius = 87.0517

[node name="KinematicBody2D" type="KinematicBody2D" groups=[
"1d4_damage",
"enemy",
]]
collision_layer = 4
collision_mask = 15
script = ExtResource( 2 )

[node name="death_sound" type="AudioStreamPlayer" parent="."]
process_priority = 1

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 0, 1 )
scale = Vector2( 0.203125, 0.21875 )
frames = SubResource( 1 )
animation = "run"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 2 )

[node name="vision" type="Area2D" parent="."]
visible = false
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="vision"]
shape = SubResource( 3 )

[connection signal="finished" from="death_sound" to="." method="_on_AudioStreamPlayer_finished"]
[connection signal="body_entered" from="vision" to="." method="_on_vision_body_entered"]
[connection signal="body_exited" from="vision" to="." method="_on_vision_body_exited"]
